# aisoftoj

./: .env.production.example  .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md  db_init_data.sql  db_migration_ai_chat.sql  db_migration_knowledge.sql  db_schema.sql  pom.xml
aisoftoj-ai-service/: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
aisoftoj-ai-service/examples/: kg_pdf_extraction_example.py
aisoftoj-ai-service/src/aisoftoj_ai/: __init__.py  config.py  main.py  redis_compat.py  services.py  study_agent.py  worker.py
aisoftoj-ai-service/src/aisoftoj_ai/api/: __init__.py  routes.py  schemas.py
aisoftoj-ai-service/src/aisoftoj_ai/clients/: mineru.py  qdrant.py  reranker.py  searxng.py  storage.py  vllm.py
aisoftoj-ai-service/src/aisoftoj_ai/kg_pdf/: __init__.py  kg_document_parser.py  kg_extraction_chunks.py  kg_relation_extractor.py  kg_structure_builder.py  models.py  workflow.py  wrong_question_aligner.py
aisoftoj-ai-service/src/aisoftoj_ai/rag/: __init__.py  chunking.py  citations.py  ingestion.py  models.py  retrieval.py  sparse.py  tasks.py
aisoftoj-ai-service/src/aisoftoj_ai/rag/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py
aisoftoj-ai-service/src/aisoftoj_ai/recommendation_agent/: __init__.py  graph.py  knowledge_graph.py
aisoftoj-ai-service/tests/: test_api.py  test_chat_stream.py  test_chunker.py  test_citations.py  test_job_status.py  test_mineru.py  test_qdrant.py  test_rag_graph.py  test_redis_compat.py  test_searxng.py  test_sparse.py  test_tasks.py  test_vllm_thinking.py
sql/: user.sql  (+5 more)
(+232 files in other folders)
