[project]
name = "aisoftoj-ai-service"
version = "0.1.0"
description = "知构软考刷题平台 RAG 与学习 Agent 服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.26,<1",
    "deepagents>=0.0.1",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "jieba>=0.42,<1",
    "langchain-core>=0.3,<2",
    "langchain-openai>=1.0,<2",
    "langchain-text-splitters>=0.3,<2",
    "langgraph>=1.1,<2",
    "pydantic-settings>=2.7,<3",
    "python-multipart>=0.0.20,<1",
    "qdrant-client>=1.13,<2",
    "redis>=5.2,<7",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<2",
    "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aisoftoj_ai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
